# skyrim-dialogue-parser

./: .gitignore  Cargo.toml  notes.txt  notes_sorted.txt
data/: Examples.txt  Skyrim_English.DLSTRINGS  Skyrim_English.ILSTRINGS  Skyrim_English.STRINGS  Update_English.DLSTRINGS  Update_English.STRINGS  info.txt
src/: main.rs
src/parsers/: esm_parser.rs  field_parser.rs  grup_parser.rs  mod.rs  record_parser.rs
src/strings/: ilstring_lookup.rs  mod.rs  string_lookup.rs
